Name:                zoom-cache-pcm

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.1.0.0

Synopsis:            Library and tools for zoom-cache PCM audio codecs

-- Description:         

License:             BSD3
License-file:        LICENSE
Author:              Conrad Parker
Maintainer:          Conrad Parker <conrad@metadecks.org>
Stability:           Experimental
Category:            Sound

Cabal-version:       >=1.2
Build-type:          Simple

-- Extra-source-files:  

Library
  Build-depends:
    base,
    blaze-builder,
    bytestring,
    containers,
    iteratee                  >= 0.8.6.0,
    ListLike                  >= 1.0     && < 4,
    MonadCatchIO-transformers,
    mtl,
    zoom-cache                >= 0.3.0.0

  Exposed-modules:
    Data.ZoomCache.PCM
    Data.ZoomCache.PCM.Double
    Data.ZoomCache.PCM.Int
    Data.ZoomCache.PCM.Types
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
